[package]
name = "orb"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orb"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
marinade-cpi = { version = "0.3.0", features = ["no-entrypoint"] }


[dev-dependencies]
solana-program = "1.9.28"
solana-program-test ="1.9.28"
solana-sdk ="1.9.28"
tokio = "1.14.1"
